# TACO

./: .dstack.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.training  GTSAM_MIGRATION.md  Makefile  README.md  pyproject.toml  run_dstack.sh  run_experiments.sh
.github/workflows/: ci.yml  release.yml
docs/: CVGL_BUGFIX.md  CVGL_MIGRATION.md  CVGL_MODEL_SUMMARY.md  CVGL_RELOCATION_SUMMARY.md  Makefile  api.rst  conf.py  contributing.rst  examples.rst  image_retrieval.md  index.rst  installation.rst  quickstart.rst
examples/: full.py  gtsam_example.py  inference_image_retrieval.py  train_cvgl.py  train_image_retrieval.py
scripts/: release.sh  setup.sh
src/taco/: __init__.py
src/taco/data/: __init__.py  camera_model.py  graph_refine.py  kitti.py  sat.py
src/taco/localization/: __init__.py
src/taco/localization/cvgl/: __init__.py  dataset.py  measurement.py  model.py
src/taco/pose_graph/: __init__.py  edge.py  graph.py  node.py  optimizer.py
src/taco/sensors/: __init__.py
src/taco/sensors/cvgl/: __init__.py  callbacks.py  cvusa.py  data.py  dataset.py  junction_dataset.py  kitti.py  localizer.py  measurement.py  model.py  train.py
src/taco/sensors/cvgl/models/: convnext.py  sample4geo.py
src/taco/sensors/cvgl/sample4geo/: model.py
src/taco/sensors/imu/: __init__.py  data.py  integrator.py  preintegration.py  utils.py
src/taco/utils/: __init__.py  config.py  conversions.py  geometry.py  image.py  io.py
src/taco/visualization/: __init__.py  plotter.py
tasks/: baseline.yml  single.yml
tests/: __init__.py  conftest.py  test_camera_model.py  test_cvgl.py  test_cvgl_model.py  test_geometry.py  test_graph_refine.py  test_imu.py  test_pose_graph.py  test_sat.py  test_utils.py  test_version.py
weights/pretrained/cvact/convnext_base.fb_in22k_ft_in1k_384/: config.py
weights/pretrained/cvusa/convnext_base.fb_in22k_ft_in1k_384/: config.py
weights/pretrained/university/convnext_base.fb_in22k_ft_in1k_384/: config.py
weights/sample4geo/cvact/convnext_base.fb_in22k_ft_in1k_384/: config.py
weights/sample4geo/cvusa/convnext_base.fb_in22k_ft_in1k_384/: config.py
weights/sample4geo/vigor_cross/convnext_base.fb_in22k_ft_in1k_384/: config.py
weights/sample4geo/vigor_same/convnext_base.fb_in22k_ft_in1k_384/: config.py
